# oop_pract_9

./: .pre-commit-config.yaml  LICENSE  README.md  oop_pract_9.code-workspace  pyproject.toml
examples/: multiprocessing_example.py  process_daemon_example.py  process_inheritance_example.py  process_is_alive_example.py  process_join_example.py  process_terminate_example.py
tasks/: multiprocessing_sum_series.py  task_1.py
tests/: test_multiprocessing_sum_series.py
